# edge-algo

./: .gitignore  README.md  RESOURCE_EVALUATION.md  pyproject.toml
frontend/: index.html  package-lock.json  package.json  tuner.html  vite.config.ts
frontend/src/: App.tsx  tuner.tsx
frontend/src/components/: CameraFeed.tsx  EdgeDetection.tsx  LogMessages.tsx  MLDetection.tsx  WeightTuner.tsx
models/fast_scnn/: config.json
models/yolo/: config.json
scripts/: download_models.py  quantize_model.py
src/: __init__.py  config.py  edge_detection.py  lane_detection_ml.py  lane_detector.py  main.py  run_server.py  run_tuner.py  run_tuner_server.py  steering_utils.py  tuner_server.py  web_server.py  weight_tuner.py
