[project]
name = "vision-algo"
version = "0.1.0"
description = "Edge detection steering system for Raspberry Pi 5"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "picamera2>=0.3.12",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

