[project]
name = "vision-algo"
version = "0.1.0"
description = "Edge detection steering system for Raspberry Pi 5"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "picamera2>=0.3.12",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "python-multipart>=0.0.6",
    "optuna>=3.0.0",
    "onnxruntime>=1.15.0",  # REQUIRED: Primary inference runtime (faster than PyTorch)
    "Pillow>=10.0.0",
    "psutil>=5.9.0",  # For memory monitoring
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

